Update DonService entities and service logic